# smart-grid-privacy

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  combine.c  combine_and_decrypt.c  encrypt.c  experiments.sh  keygen.c  nncombine.c  nnsplit.c  nnsplit.h  nnsplit_main.c  paillier.c  paillier.h  runtests.c  shamir.c  shamir.h  shcombine.c  shsplit.c  util.c  util.h
